@@ -1,7 +1,5 @@
 package gov.cms.qpp.conversion.util;
 
-import com.google.common.collect.ImmutableSet;
-
 import gov.cms.qpp.conversion.decode.MeasureDataDecoder;
 import gov.cms.qpp.conversion.model.Node;
 import gov.cms.qpp.conversion.model.TemplateId;
@@ -23,9 +21,9 @@ public class MeasureConfigHelper {
 
 	public static final String MEASURE_ID = "measureId";
 	public static final String NO_MEASURE = "No given measure id";
-	private static Set<String> MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = ImmutableSet.of("005", "007", "008", "143", "438");
+	private static Set<String> MULTI_TO_SINGLE_PERF_RATE_MEASURE_ID = Set.of("005", "007", "008", "143", "438");
 	public final static String SINGLE_TO_MULTI_PERF_RATE_MEASURE_ID = "370";
-	public static final Set<String> CPC_PLUS_MEASURES = ImmutableSet.of("001", "236");
+	public static final Set<String> CPC_PLUS_MEASURES = Set.of("001", "236");
 
 	private MeasureConfigHelper() {
 		// private for this helper class
